// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DisplayWrappers|NavBar/LinkWrapper LinkNavBar 1`] = `
<div
  className="sc-bxivhb kPrwFe"
>
  <a
    className="sc-htpNat htswVG sc-bxivhb kPrwFe"
  >
    HOME
  </a>
  <a
    className="sc-htpNat htswVG sc-bxivhb kPrwFe"
  >
    CAUSES
  </a>
  <a
    className="sc-htpNat htswVG sc-bxivhb kPrwFe"
  >
    POSTS
  </a>
  <a
    className="sc-htpNat htswVG sc-bxivhb kPrwFe"
  >
    PROFILE
  </a>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre C 1`] = `
<div
  className="sc-bwzfXH kuCEjS"
  placeholder="Search Causes"
>
  <input
    className="sc-bdVaJa hRHmjZ sc-bwzfXH kuCEjS"
    placeholder="Search Causes"
    placeholer="Search Causes"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre C&P 1`] = `
<div
  className="sc-bwzfXH kuCEjS"
  placeholder="Search Causes and Posts"
>
  <input
    className="sc-bdVaJa hRHmjZ sc-bwzfXH kuCEjS"
    placeholder="Search Causes and Posts"
    placeholer="Search Causes and Posts"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre P 1`] = `
<div
  className="sc-bwzfXH kuCEjS"
  placeholder="Search Posts"
>
  <input
    className="sc-bdVaJa hRHmjZ sc-bwzfXH kuCEjS"
    placeholder="Search Posts"
    placeholer="Search Posts"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre Standard 1`] = `
<div
  className="sc-bwzfXH kuCEjS"
  placeholder="Search"
>
  <input
    className="sc-bdVaJa hRHmjZ sc-bwzfXH kuCEjS"
    placeholder="Search"
    placeholer="Search"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarRight Standard 1`] = `
<div
  className="sc-dnqmqq jCWLOE"
>
  <div
    className="sc-bxivhb dyYEUU"
  >
    <button
      className="sc-htpNat kpRQrk"
      secondary={true}
    >
      SIGN UP
    </button>
    <button
      className="sc-htpNat dvtAjB"
    >
      LOG IN
    </button>
  </div>
  <div
    className="sc-htoDjs czCAWw"
  >
    <div
      className="sc-gzVnrw gOvDYE"
    >
      <img
        className="sc-bZQynM hhXPhy"
      />
    </div>
    <div
      className="sc-EHOje iUlrzR"
    >
      <div
        className="sc-ifAKCX iVLAQB"
        fontSize="16px"
        height="50%"
        paddingTop="15px"
        width="100%"
      >
        James Wheeler
      </div>
      <div
        className="sc-ifAKCX jhGUwf"
        fontSize="12px"
        height="50%"
        paddingBottom="15px"
        width="100%"
      >
        larkin_tr***@yahoo.com
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileImageWrapper Standard 1`] = `
<div
  className="sc-gzVnrw gOvDYE"
>
  <img
    className="sc-bZQynM hhXPhy"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileInfoWrapper Standard 1`] = `
<div
  className="sc-EHOje iUlrzR"
>
  <div
    className="sc-ifAKCX iVLAQB"
    fontSize="16px"
    height="50%"
    paddingTop="15px"
    width="100%"
  >
    James Wheeler
  </div>
  <div
    className="sc-ifAKCX jhGUwf"
    fontSize="12px"
    height="50%"
    paddingBottom="15px"
    width="100%"
  >
    larkin_tr***@yahoo.com
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileWrapper Standard 1`] = `
<div
  className="sc-htoDjs czCAWw"
>
  <div
    className="sc-gzVnrw gOvDYE"
  >
    <img
      className="sc-bZQynM hhXPhy"
    />
  </div>
  <div
    className="sc-EHOje iUlrzR"
  >
    <div
      className="sc-ifAKCX iVLAQB"
      fontSize="16px"
      height="50%"
      paddingTop="15px"
      width="100%"
    >
      James Wheeler
    </div>
    <div
      className="sc-ifAKCX jhGUwf"
      fontSize="12px"
      height="50%"
      paddingBottom="15px"
      width="100%"
    >
      larkin_tr***@yahoo.com
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/SignUpInButtonWrapper Standard 1`] = `
<div
  className="sc-bxivhb dyYEUU"
>
  <button
    className="sc-htpNat kpRQrk"
    secondary={true}
  >
    SIGN UP
  </button>
  <button
    className="sc-htpNat dvtAjB"
  >
    LOG IN
  </button>
</div>
`;

exports[`Storyshots Primitive|/Buttons/ProfileInfoNavBar Login 1`] = `
<button
  className="sc-htpNat dvtAjB"
  onClick={[Function]}
>
  LOG IN
</button>
`;

exports[`Storyshots Primitive|/Buttons/ProfileInfoNavBar SignUp 1`] = `
<button
  className="sc-htpNat kpRQrk"
  onClick={[Function]}
  secondary={true}
>
  SIGN UP
</button>
`;

exports[`Storyshots Primitive|/Buttons/ProfileInfoNavBar button 1`] = `
<button
  className="sc-htpNat dvtAjB"
  onClick={[Function]}
/>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar ProfileEmail 1`] = `
<div
  className="sc-ifAKCX jhGUwf"
  fontSize="12px"
  height="50%"
  paddingBottom="15px"
  width="100%"
>
  larkin_tr***@yahoo.com
</div>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar ProfileName 1`] = `
<div
  className="sc-ifAKCX iVLAQB"
  fontSize="16px"
  height="50%"
  paddingTop="15px"
  width="100%"
>
  James Wheeler
</div>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar Standard 1`] = `
<div
  className="sc-ifAKCX fvjIve"
>
  Standard
</div>
`;

exports[`Storyshots Primitive|Images/ProfileImage Standard 1`] = `
<img
  className="sc-bZQynM hhXPhy"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar C 1`] = `
<input
  className="sc-bdVaJa hRHmjZ"
  placeholder="Search Causes"
  placeholer="Search Causes"
  type="text"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar C&P 1`] = `
<input
  className="sc-bdVaJa hRHmjZ"
  placeholder="Search Causes and Posts"
  placeholer="Search Causes and Posts"
  type="text"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar P 1`] = `
<input
  className="sc-bdVaJa hRHmjZ"
  placeholder="Search Posts"
  placeholer="Search Posts"
  type="text"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar Standard 1`] = `
<input
  className="sc-bdVaJa hRHmjZ"
  placeholder="Search"
  placeholer="Search"
  type="text"
/>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Causes 1`] = `
<a
  className="sc-iwsKbI ficOqb"
>
  CAUSES
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Home 1`] = `
<a
  className="sc-iwsKbI ficOqb"
>
  HOME
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Posts 1`] = `
<a
  className="sc-iwsKbI ficOqb"
>
  POSTS
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Profile 1`] = `
<a
  className="sc-iwsKbI ficOqb"
>
  PROFILE
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Standard 1`] = `
<a
  className="sc-iwsKbI ficOqb"
/>
`;
